# Digital_Product_Weather_Prediction

./: README.md
App/: App_main.py  README.md  pyproject.toml
ML_Model/: .cache.sqlite  Makefile  README.md  pyproject.toml  requirements.txt
ML_Model/ml_model/: __init__.py  dataset.py  features.py  plots.py
ML_Model/ml_model/modeling/: predict.py  train.py
ML_Model/models/precipitation_fall/: reg_lgbm_best_model.pkl
ML_Model/models/rain_or_not/: lgbm_best_model.pkl
ML_Model/notebooks/precipitation_fall/: experiment-1.ipynb
ML_Model/notebooks/rain_or_not/: .gitignore  experiment-2.ipynb
Weather_Forcast_Api/: .dockerignore  Api_testing.ipynb  Dockerfile  Dockerhub.ipynb  pyproject.toml  readme.md  requirements.txt
Weather_Forcast_Api/app/: main.py  src.py
Weather_Forcast_Api/data/raw/: weather_data.csv
Weather_Forcast_Api/models/precipitation_fall/: catboost_best_model.pkl  gbr_best_model.pkl
Weather_Forcast_Api/models/rain_or_not/: gnb_best_model.pkl  xgb_best_model.pkl
