[project]
name = "api-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Agam Singh Saini",email = "AgamSingh.Saini@student.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openmeteo-requests (>=1.7.4,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
