[project]
name = "ml-api"
version = "0.1.0"
description = "Need to be done"
authors = [
    {name = "Agam singh Saini",email = "Agamsingh.saini@student.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xgboost (>=3.0.5,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (==1.5.1)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "requests (>=2.32.5,<3.0.0)",
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
